bdr.BDR2.scala.error
Compilation error:
BDR2:6: error: '=>' expected but '=' found.
    case move="R" =>  Right() forward()
             ^BDR2:7: error: '=>' expected but '=' found.
    case move="L" =>  Left() forward()
             ^BDR2:8: error: '=>' expected but '=' found.
    case move="I" => Right() Righ() forward()
             ^BDR2:10: error: '=>' expected but '=' found.
    case move="A" => forward()
             ^BDR2:12: error: '=>' expected but '=' found.
    case move="B" => forward() forward()
             ^BDR2:14: error: '=>' expected but '=' found.
    case move="C" => forward() forward() forward()
             ^BDR2:15: error: '=>' expected but '=' found.
    case move="D" => forward() forward() forward() forward()
             ^BDR2:16: error: '=>' expected but '=' found.
    case move="E" => forward() forward() forward()  forward() forward() 
             ^BDR2:17: error: '=>' expected but '=' found.
    case move="F" => forward() forward() forward() forward() forward() forward()
             ^BDR2:18: error: '=>' expected but '=' found.
    case move="Z" => backward()
             ^BDR2:19: error: '=>' expected but '=' found.
    case move="Y" => backward() backward()
             ^BDR2:20: error: '=>' expected but '=' found.
    case move="X" => backward() backward() backward()
             ^BDR2:21: error: '=>' expected but '=' found.
    case move="W" => backward() backward() backward() backward()
             ^BDR2:22: error: '=>' expected but '=' found.
    case move="V" => backward() backward() backward() backward() backward()
             ^BDR2:23: error: '=>' expected but '=' found.
    case move="U" => backward()backward() backward() backward() backward() backward()
             ^BDR2:24: error: '=>' expected but '=' found.
    case _ = i=i+1
           ^